--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,7 @@
 .page {
   padding: 2% 6% 0.4% 6%;
   background-color: rgb(var(--v-theme-back));
+  height: 100%;
 }
 
 /*:::::::::::::::::::::::::::::::
@@ -34,6 +35,9 @@
 /*:::::::::::::::::::::::::::::::
  * width
  *:::::::::::::::::::::::::::::::*/
+.w-20 {
+  width: 20%;
+}
 .w-30 {
   width: 30%;
 }
@@ -49,6 +53,9 @@
 .w-70 {
   width: 70%;
 }
+.w-80 {
+  width: 80%;
+}
 /*:::::::::::::::::::::::::::::::
  * radio button label
  *:::::::::::::::::::::::::::::::*/
@@ -60,4 +67,17 @@
 
 button > span.v-btn__prepend > i {
   margin-top: -3px;
+}
+
+/*:::::::::::::::::::::::::::::::
+ * input label
+ *:::::::::::::::::::::::::::::::*/
+.input-label {
+  background-color: rgb(var(--v-theme-input));
+  color: rgb(var(--v-theme-textmain));
+  opacity: 1;
+  padding: 8px;
+  width: 200px;
+  text-align: center;
+  border-radius: 4px;
 }
