--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,7 +61,7 @@
  *:::::::::::::::::::::::::::::::*/
 .v-radio-group label {
   padding-left: 8px;
-  color: rgb(var(--v-theme-textmain));
+  color: rgb(var(--v-theme-contract));
   opacity: 1;
 }
 
@@ -69,15 +69,31 @@ button > span.v-btn__prepend > i {
   margin-top: -3px;
 }
 
+.v-checkbox label {
+  padding-left: 8px;
+  font-size: 1.125rem; /* 18px */
+  line-height: 1.75rem; /* 28px */
+  opacity: 1;
+  font-weight: 500;
+}
+
 /*:::::::::::::::::::::::::::::::
  * input label
  *:::::::::::::::::::::::::::::::*/
 .input-label {
-  background-color: rgb(var(--v-theme-input));
-  color: rgb(var(--v-theme-textmain));
+  background-color: rgb(var(--v-theme-bInputLabel));
+  color: rgb(var(--v-theme-fInputLabel));
   opacity: 1;
   padding: 8px;
   width: 200px;
   text-align: center;
   border-radius: 4px;
+}
+
+/*:::::::::::::::::::::::::::::::
+ * button
+ *:::::::::::::::::::::::::::::::*/
+.active-btn {
+  background-color: rgb(var(--v-theme-primary)) !important;
+  color: rgb(var(--v-theme-textmain)) !important;
 }
